--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,11 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
+  background: #fffaf5;
+}
+/* common */
+a {
+  text-decoration: none;
 }
 h1,
 h2,
@@ -22,4 +27,106 @@ select,
 button {
   font-size: inherit;
   font-family: inherit;
+}
+.container {
+  width: 1170px;
+  max-width: calc(100% - 48px);
+  margin: 0 auto;
+}
+.btn {
+  --height: 56px;
+  display: inline-block;
+  min-width: 130px;
+  height: var(--height);
+  line-height: var(--height);
+  border-radius: 99px;
+  border: 1px solid rgba(0, 9, 88, 0.7);
+  color: #000958;
+  text-align: center;
+  font-size: 1.4rem;
+  font-weight: 600;
+  transition: 0.2s;
+}
+.btn:hover {
+  background: #000958;
+  color: #fff;
+}
+/* Header */
+.header {
+  padding: 26px 0;
+}
+.header__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar__list {
+  display: flex;
+}
+.navbar__link,
+.header-action__link {
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1; /* 100% */
+  color: #5e6085;
+  padding: 8px 18px;
+}
+.navbar__link:hover,
+.header-action__link:hover {
+  text-shadow: 0.5px 0 0 currentColor;
+  color: #000958;
+}
+.header-action__btn {
+  --height: 50px;
+  min-width: 118px;
+}
+/* Hero */
+.hero {
+  margin-top: 74px;
+}
+.hero__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.hero__media {
+  display: flex;
+}
+.hero__img-wrap {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 388px;
+  height: 488px;
+  border-radius: 16px;
+  background: #fe997b;
+  border: 3px solid #fff;
+}
+.hero__img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 16px;
+}
+.hero__decor {
+  position: absolute;
+  z-index: -1;
+}
+.hero__decor-left {
+  left: -58px;
+  bottom: 10px;
+}
+.hero__decor-right {
+  top: 17px;
+  right: -43px;
+}
+.hero__img-wrap-small {
+  align-self: flex-end;
+  width: 186px;
+  height: 244px;
+  border: 2px solid #f7ddd7;
+  margin: 0 0 -58px -24px;
+  background: #faa7ad;
+}
+.hero__img-small {
 }
