--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --primary-color: #ff5b2e;
+}
 html {
   font-size: 62.5%;
 }
@@ -35,7 +38,9 @@ button {
 }
 .btn {
   --height: 56px;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   min-width: 130px;
   height: var(--height);
   line-height: var(--height);
@@ -50,6 +55,22 @@ button {
 .btn:hover {
   background: #000958;
   color: #fff;
+  cursor: pointer;
+}
+.btn--primary {
+  color: #fff;
+  background: var(--primary-color);
+  border-color: var(--primary-color);
+}
+.btn__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #fff;
+  margin-left: 10px;
 }
 /* Header */
 .header {
@@ -88,6 +109,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  column-gap: 120px;
 }
 .hero__media {
   position: relative;
@@ -178,4 +200,50 @@ button {
 }
 .hero-list-item:nth-of-type(2) .hero-list-item__thumb {
   background: #c6e2fa;
+}
+.hero__heading {
+  color: #000958;
+  font-size: 6.6rem;
+  font-weight: 800;
+  line-height: 1.15; /* 115.152% */
+}
+.hero__desc {
+  max-width: 391px;
+  margin-top: 24px;
+  color: #656689;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.87; /* 187.5% */
+}
+.hero__row {
+  display: flex;
+  align-items: center;
+  column-gap: 24px;
+  margin-top: 38px;
+}
+.hero__cta-btn {
+  --height: 60px;
+  min-width: 190px;
+  box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+  font-size: 1.6rem;
+}
+.hero__cta-btn .btn__icon svg {
+  color: var(--primary-color);
+}
+.hero__cta-btn:hover {
+  background: #fff;
+  color: var(--primary-color);
+}
+.hero__cta-btn:hover .btn__icon {
+  background: var(--primary-color);
+}
+.hero__cta-btn:hover .btn__icon svg {
+  color: #fff;
+}
+.hero__cta-link {
+  color: #000958;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1; /* 100% */
+  text-decoration: underline;
 }
