--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,20 @@ button {
   border-radius: 50%;
   background: #fff;
   margin-left: 10px;
+  box-shadow: 4px 3px 10px -1px rgba(191, 41, 0, 0.4);
+}
+.section__heading {
+  color: #000958;
+  font-size: 5.2rem;
+  font-weight: 700;
+  line-height: 1.19; /* 119.231% */
+}
+.section__desc {
+  margin-top: 24px;
+  color: #656689;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.87; /* 187.5% */
 }
 /* Header */
 .header {
@@ -246,4 +260,59 @@ button {
   font-weight: 500;
   line-height: 1; /* 100% */
   text-decoration: underline;
+}
+/* about */
+.about {
+  margin-top: 130px;
+}
+.about__inner {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+.about__label {
+  color: #5e6085;
+  font-family: Sora;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1; /* 100% */
+}
+.about__heading {
+  margin-top: 15px;
+}
+.about__heading,
+.about__desc {
+  width: 444px;
+}
+.about__checklist {
+  margin-top: 54px;
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: flex-start;
+  gap: 34px 36px;
+}
+.about__check-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  color: #48496a;
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1; /* 100% */
+}
+.about__check-item::before {
+  content: "";
+  display: inline-block;
+  margin-right: 10px;
+  width: 24px;
+  height: 24px;
+  background: #ff5d31;
+  box-shadow: 0px 4px 15px -3px rgba(255, 93, 49, 0.69);
+  border-radius: 4px;
+}
+.about__check-item::after {
+  position: absolute;
+  top: 2px;
+  left: 5px;
+  content: url(../icons/check.svg);
 }
