--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,6 +269,7 @@ button {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  row-gap: 146px;
 }
 .about__media {
   position: relative;
@@ -374,4 +375,46 @@ button {
   top: 157px;
   right: -50px;
   z-index: -1;
+}
+.about__img-wrap-bottom {
+  margin-left: 0;
+  width: 458px;
+  height: 500px;
+  border-radius: 18px;
+  border: 2px solid #fff;
+  background: linear-gradient(180deg, #c6e2fa 0%, #94c2ea 100%);
+  box-shadow: 0px 17px 77px -8px rgba(190, 165, 139, 0.17);
+}
+.about__img-wrap-bottom::after {
+  content: none;
+}
+.about__img-bottom {
+  width: 100%;
+}
+.about__decor-img {
+  position: absolute;
+}
+.about__decor-img:nth-child(1) {
+  top: 13px;
+  right: 64px;
+}
+.about__decor-img:nth-child(2) {
+  top: -16px;
+  right: 13px;
+}
+.about__decor-img:nth-child(3) {
+  top: 33px;
+  right: -21px;
+}
+.about__decor-img:nth-child(4) {
+  top: 268px;
+  right: -33px;
+}
+.about__decor-img:nth-child(5) {
+  right: 19px;
+  bottom: 150px;
+}
+.about__decor-img:nth-child(6) {
+  right: -42px;
+  bottom: -55px;
 }
