--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,13 +73,13 @@ button {
   margin-left: 10px;
   box-shadow: 4px 3px 10px -1px rgba(191, 41, 0, 0.4);
 }
-.section__heading {
+.section-heading {
   color: #000958;
   font-size: 5.2rem;
   font-weight: 700;
   line-height: 1.19; /* 119.231% */
 }
-.section__desc {
+.section-desc {
   margin-top: 24px;
   color: #656689;
   font-size: 1.6rem;
@@ -417,4 +417,79 @@ button {
 .about__decor-img:nth-child(6) {
   right: -42px;
   bottom: -55px;
+}
+.about__desc-bottom {
+  width: 511px;
+  margin-bottom: 52px;
+}
+.tab__list {
+  position: relative;
+  display: inline-flex;
+  column-gap: 56px;
+}
+.tab__list::after,
+.tab__item--active::after,
+.tab__content-more::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2px;
+  opacity: 0.07;
+  background: #ff5b2e;
+  border-radius: 1;
+}
+.tab__item--active::after {
+  width: 95px;
+  opacity: 1;
+}
+.tab__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  column-gap: 12px;
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+.tab__icon {
+  width: 20px;
+}
+.tab__title {
+  color: #48496a;
+  font-family: Sora;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1; /* 100% */
+}
+.tab__contents {
+  padding-top: 36px;
+}
+.tab__content-item {
+  display: none;
+}
+.tab__content-item--active {
+  display: block;
+}
+.tab__content-desc {
+  width: 391px;
+  color: #656689;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.71; /* 171.429% */
+}
+.tab__content-more {
+  position: relative;
+  margin-top: 32px;
+  padding-bottom: 5px;
+  display: inline-block;
+  color: #ff5d31;
+  font-family: Poppins;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1; /* 100% */
+}
+.tab__content-more::after {
+  opacity: 1;
+  height: 1.5px;
 }
