Làm phần service #1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,3 +493,72 @@ button {
   opacity: 1;
   height: 1.5px;
 }
+/* Service */
+.service {
+  margin-top: 185px;
+  padding: 68px 0 100px;
+  background: #fff6ed;
+}
+.service__top {
+  text-align: center;
+}
+.service__desc {
+  color: #5e6085;
+  font-family: Sora;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1; /* 100% */
+  margin-bottom: 15px;
+}
+.service__body {
+  margin-top: 70px;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+}
+.service__column {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.service-item {
+  width: 294px;
+  padding: 30px;
+  border-radius: 10px;
+  border: 2px solid rgba(255, 188, 122, 0.26);
+  background: #fff;
+}
+.service-item__heading {
+  color: #000958;
+  font-size: 2.2rem;
+  font-weight: 600;
+  line-height: 1; /* 100% */
+}
+.service-item__heading::before {
+  content: "";
+  margin: 0 12px -3px 0;
+  display: inline-block;
+  width: 2px;
+  height: 22px;
+  background: linear-gradient(90deg, #ff5b2e 0.39%, #ffa187 100.29%);
+}
+.service-item__desc {
+  margin-top: 18px;
+  color: #656689;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.71; /* 171.429% */
+}
+.service-item__more {
+  display: inline-flex;
+  align-items: center;
+  margin-top: 24px;
+  color: #34396a;
+  font-family: Sora;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1; /* 100% */
+}
+.service-item__more::after {
+  content: url(../icons/arrow-up-right.svg);
+  margin: 1px 0 0 5px;
+}
