--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,9 @@ button {
   margin-left: 10px;
   box-shadow: 4px 3px 10px -1px rgba(191, 41, 0, 0.4);
 }
+.btn-primary:hover {
+  background-color: var(--primary-color);
+}
 .section-heading {
   color: #000958;
   font-size: 5.2rem;
@@ -86,6 +89,14 @@ button {
   font-weight: 400;
   line-height: 1.87; /* 187.5% */
 }
+.line__clamp {
+  --line: 3;
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 /* Header */
 .header {
   padding: 26px 0;
@@ -502,7 +513,8 @@ button {
 .service__top {
   text-align: center;
 }
-.service__desc {
+.service__desc,
+.staff__desc {
   color: #5e6085;
   font-family: Sora;
   font-size: 1.6rem;
@@ -540,7 +552,7 @@ button {
   display: inline-block;
   width: 2px;
   height: 22px;
-  background: linear-gradient(90deg, #ff5b2e 0.39%, #ffa187 100.29%);
+  background: linear-gradient(180deg, #ff5b2e 0.39%, #ffa187 100.29%);
 }
 .service-item__desc {
   margin-top: 18px;
@@ -599,6 +611,112 @@ button {
   font-weight: 500;
   line-height: 16px; /* 100% */
 }
-.service__cta:hover {
-  background-color: var(--primary-color);
+/* Staff */
+.staff {
+  padding: 130px 0;
+}
+.staff__desc,
+.staff__heading {
+  text-align: center;
+}
+
+.staff__list {
+  margin-top: 45px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 35px;
+}
+.staff-item {
+  text-align: center;
+}
+.staff-item__img-wrap {
+  position: relative;
+  margin: 0 16px;
+  border-radius: 130px;
+}
+.staff-item__img-wrap::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 92%;
+  border-radius: inherit;
+  bottom: 0;
+  left: 0;
+}
+.staff-item:nth-child(1) .staff-item__img-wrap::before {
+  background: linear-gradient(180deg, #90ccff 0%, #59a8eb 95.96%);
+}
+.staff-item:nth-child(2) .staff-item__img-wrap::before {
+  background: linear-gradient(180deg, #ff997e 0%, #f3752e 100%);
+}
+.staff-item:nth-child(3) .staff-item__img-wrap::before {
+  background: linear-gradient(180deg, #fabf3e 0%, #ffa14a 100%);
+}
+.staff-item:nth-child(4) .staff-item__img-wrap::before {
+  background: linear-gradient(180deg, #5bd6e2 0%, #00a7cc 100%);
+}
+.staff-item__img-wrap::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: calc(100% + 36px);
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: 100%;
+}
+.staff-item:nth-child(1) .staff-item__img-wrap::after {
+  background-image: url(../img/staff-decor-01.svg);
+}
+.staff-item:nth-child(2) .staff-item__img-wrap::after {
+  background-image: url(../img/staff-decor-02.svg);
+}
+.staff-item:nth-child(3) .staff-item__img-wrap::after {
+  background-image: url(../img/staff-decor-03.svg);
+}
+.staff-item:nth-child(4) .staff-item__img-wrap::after {
+  background-image: url(../img/staff-decor-04.svg);
+}
+.staff-item:nth-child(even) .staff-item__img-wrap::after {
+  background-position: 0 18px;
+}
+.staff-item__img {
+  display: block;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  border-radius: inherit;
+}
+.staff-item__title {
+  margin-top: 34px;
+  color: #656689;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1; /* 100% */
+}
+.staff-item__name {
+  margin-top: 14px;
+  color: #000958;
+  font-family: Sora;
+  font-size: 2.2rem;
+  font-weight: 600;
+  line-height: 1; /* 100% */
+}
+.staff__cta-wrap {
+  margin-top: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.staff__cta {
+  min-width: 193px;
+  border-radius: 31px;
+  border: 1px solid rgba(255, 91, 46, 0.6);
+  box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+  color: var(--primary-color);
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1; /* 100% */
 }
