--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -808,6 +808,9 @@ button {
   border-radius: 20px;
   background: #fff;
 }
+.pricing-item--active {
+  box-shadow: 0px 20px 44px 0px rgba(195, 108, 22, 0.06);
+}
 .pricing-item__type {
   color: #ff5b2e;
   font-size: 1.2rem;
@@ -852,4 +855,122 @@ button {
 .pricing-item__item::before {
   content: url(../icons/price-check.svg);
   margin-right: 12px;
+}
+/* Review */
+.review {
+  padding: 53px 0;
+}
+.review__inner {
+  display: flex;
+  align-items: center;
+  column-gap: 44px;
+}
+.review__control {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 54px;
+  height: 54px;
+  border-radius: 50%;
+  border: 1.5px solid #ffd1c4;
+  flex-shrink: 0;
+  background: transparent;
+  color: var(--primary-color);
+  box-shadow: rgba(255, 91, 46, 0.6) 0px 25px 50px -12px;
+}
+.review__control:nth-of-type(2) {
+  margin-left: auto;
+}
+.review__control:hover {
+  background: var(--primary-color);
+  color: #fff;
+  border-color: var(--primary-color);
+}
+.review__content {
+  overflow: hidden;
+}
+.review-item {
+  display: flex;
+  align-items: center;
+  column-gap: 115px;
+  width: 100%;
+  flex-shrink: 0;
+}
+.review-item__media {
+  margin: 21px 0 59px;
+  position: relative;
+  width: 274px;
+  flex-shrink: 0;
+  border-radius: 137px;
+}
+.review-item__media::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 82%;
+  border-radius: inherit;
+  background: #ffda54;
+}
+.review-item__img {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  border-radius: inherit;
+  display: block;
+}
+.review-item__content {
+  margin-top: 21px;
+}
+.review-item__quote {
+  width: 553px;
+  margin-top: 24px;
+  color: #000;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.55; /* 155.556% */
+}
+.review-item__author {
+  display: flex;
+  align-items: center;
+  margin-top: 34px;
+  color: #282828;
+  font-family: Sora;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1; /* 100% */
+}
+.review-item__author::before {
+  margin-right: 8px;
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 2px;
+  border-radius: 1px;
+  background: #000;
+}
+.review__dots {
+  display: flex;
+  justify-content: center;
+  column-gap: 8px;
+}
+.review__dot {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  border: 1px solid #ff5b2e;
+}
+.review__dot:hover {
+  background: var(--primary-color);
+  cursor: pointer;
+}
+.review__dot--active {
+  cursor: default;
+  border-radius: 4px;
+  width: 24px;
+  background: var(--primary-color);
+}
+.review__list {
+  display: flex;
 }
