--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -858,7 +858,7 @@ button {
 }
 /* Review */
 .review {
-  padding: 53px 0;
+  padding: 52px 0;
 }
 .review__inner {
   display: flex;
@@ -973,4 +973,31 @@ button {
 }
 .review__list {
   display: flex;
+}
+/* Blog */
+.blog {
+  padding: 78px 0;
+}
+.blog__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blog__info {
+  width: 350px;
+  margin-right: 74px;
+}
+.blog__desc {
+  margin: 0;
+}
+.blog__cta {
+  margin-top: 24px;
+  min-width: 182px;
+  height: 56px;
+  border: 1px solid rgba(255, 91, 46, 0.6);
+  box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+  color: #ff5b2e;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1; /* 100% */
 }
