--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1001,3 +1001,162 @@ button {
   font-weight: 500;
   line-height: 1; /* 100% */
 }
+.blog__list {
+  margin-top: 54px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 48px;
+}
+.blog-item__img-wrap {
+  border-radius: 24px;
+  background: #90ccff;
+  padding: 24px 0 0 36px;
+}
+.blog-item:nth-child(2) .blog-item__img-wrap {
+  background: #ff997e;
+}
+.blog-item:nth-child(3) .blog-item__img-wrap {
+  background: #5bd6e2;
+}
+.blog-item__time {
+  color: #fff;
+  font-family: Sora;
+  font-size: 1.4;
+  line-height: 1.21; /* 121.429% */
+}
+.blog-item__img {
+  margin-top: 25px;
+  width: 100%;
+  height: 296px;
+  object-fit: cover;
+  display: block;
+}
+.blog-item__info {
+  padding: 28px 16px 0 0;
+}
+.blog-item__title {
+  color: #000958;
+  font-size: 2.2rem;
+  font-weight: 600;
+  line-height: 1.54; /* 154.545% */
+}
+.blog-item__desc {
+  margin-top: 16px;
+  color: #656689;
+  font-size: 1.4rem;
+  line-height: 1.71; /* 171.429% */
+}
+/* Footer */
+.footer {
+  margin-top: 53px;
+  background: linear-gradient(to right, #fff6ed 42%, transparent 42%);
+}
+.footer__inner {
+  display: flex;
+}
+.footer__left {
+  padding: 114px 0 148px;
+  width: 43%;
+}
+.footer__right {
+  flex: 1;
+  padding: 52px 0 48px 0;
+}
+.subscribe-form {
+  margin: 34px 0 68px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 268px;
+  height: 46px;
+  border-radius: 99px;
+  border: 1px solid rgba(255, 91, 46, 0.25);
+  background: #fff;
+}
+.subscribe-form__input {
+  padding: 0 22px;
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  border-radius: inherit;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.subscribe-form__input::placeholder {
+  color: #656689;
+  font-family: Poppins;
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 1.16; /* 116.667% */
+}
+.subscribe-form__submit {
+  margin-right: -1px;
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  background: var(--primary-color);
+  box-shadow: 0px 15px 28px -7px rgba(255, 91, 46, 0.3);
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border: none;
+  opacity: 1;
+}
+.subscribe-form__submit:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
+.footer__heading {
+  color: #000958;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.11; /* 111.111% */
+}
+.social-list {
+  margin-top: 16px;
+  display: flex;
+  column-gap: 16px;
+}
+.social-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #fff;
+  transition: 0.3s;
+}
+.social-item:hover {
+  background: var(--primary-color);
+  opacity: 0.8;
+}
+.footer__row {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 58px 137px;
+  margin-left: 129px;
+}
+.footer__list {
+  margin-top: 14px;
+}
+.footer__link {
+  color: #656689;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2; /* 200% */
+}
+.footer__link:hover {
+  text-decoration: underline;
+}
+.footer__copyright {
+  margin: 52px 0 0 22px;
+  color: #656689;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.17; /* 116.667% */
+  opacity: 0.5;
+}
